[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/UI/title.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/Level_1_btn_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/Level_1_btn_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/Level_2_btn_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/Level_2_btn_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/bg/background-v2.png" type="Texture" id=6]
[ext_resource path="res://scripts/UI/Menu.gd" type="Script" id=7]
[ext_resource path="res://scripts/UI/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://assets/bg/tutorial_4.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/tutorial_btn.png" type="Texture" id=10]
[ext_resource path="res://assets/bg/tutorial_3.png" type="Texture" id=11]
[ext_resource path="res://assets/bg/tutorial_1.png" type="Texture" id=12]
[ext_resource path="res://assets/bg/tutorial_2.png" type="Texture" id=13]
[ext_resource path="res://audio/sfx/sfx_menu_selected.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/title_loop.ogg" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 508, 278 )
scale = Vector2( 1.02344, 1.07333 )
texture = ExtResource( 6 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 504, 144 )
scale = Vector2( 1.26333, 1.625 )
texture = ExtResource( 1 )

[node name="LevelOne" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -4.0
margin_right = 128.0
margin_bottom = 61.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTwo" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 100.0
margin_right = 128.0
margin_bottom = 165.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="TextureButton" parent="."]
margin_left = 408.0
margin_top = 520.0
margin_right = 618.0
margin_bottom = 572.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="TutorialPages" type="AnimatedSprite" parent="TutorialLayer"]
visible = false
position = Vector2( 512, 300 )
frames = SubResource( 1 )

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="StartMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )
autoplay = true

[connection signal="pressed" from="LevelOne" to="." method="_on_LevelOne_pressed"]
[connection signal="pressed" from="LevelTwo" to="." method="_on_LevelTwo_pressed"]
[connection signal="button_down" from="Tutorial" to="TutorialLayer" method="_on_Tutorial_button_down"]
